fix: to heading hierarchy of links and services link whitespace on services page

--- a/client/src/AboutUs.css
+++ b/client/src/AboutUs.css
@@ -64,6 +64,10 @@
   margin-top: -1.5rem;
 }
 
+#about-us > div.cheveron-container > h2 > a {
+  font-weight: 400;
+}
+
 @media only screen and (max-width: 600px) {
   .about-container {
     padding: 2rem;
